config/samples/ingress/ingress_httpserver_default_settings.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-httpserver-sample
  annotations:
    thousandeyes.devnet.cisco.com/test-type: http-server
    thousandeyes.devnet.cisco.com/test-url: https://www.google.com/
spec:
  rules:
    - http:
        paths:
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
