config/samples/ingress/ingress_webtransactions_removal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # specify the unique test name
  name: ingress-webtransactions-sample
  annotations:
    # set test type to 'none' if you want to delete this test
    thousandeyes.devnet.cisco.com/test-type: none
spec:
  rules:
    - http:
        paths:
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
